--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1769
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -238,7 +238,9 @@ build_flags       = -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/sr
 #  -mpoke-function-name
 lib_ldf_mode      = off
 lib_compat_mode   = strict
-extra_scripts     = Marlin/src/HAL/LPC1768/upload_extra_script.py
+extra_scripts     =
+  buildroot/share/PlatformIO/scripts/common-version.py
+  Marlin/src/HAL/LPC1768/upload_extra_script.py
 src_filter        = ${common.default_src_filter} +<src/HAL/LPC1768>
 lib_deps          = Servo
   LiquidCrystal
@@ -256,7 +258,9 @@ build_flags       = -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/sr
 #  -mpoke-function-name
 lib_ldf_mode      = off
 lib_compat_mode   = strict
-extra_scripts     = Marlin/src/HAL/LPC1768/upload_extra_script.py
+extra_scripts     =
+  buildroot/share/PlatformIO/scripts/common-version.py
+  Marlin/src/HAL/LPC1768/upload_extra_script.py
 src_filter        = ${common.default_src_filter} +<src/HAL/LPC1768>
 lib_deps          = Servo
   LiquidCrystal
