--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = BIGTREE_SKR_PRO
 
 [common]
 arduinoststm32_ver = >=4.10700,<4.10800
@@ -261,7 +261,9 @@ build_flags       = -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/sr
 #  -mpoke-function-name
 lib_ldf_mode      = off
 lib_compat_mode   = strict
-extra_scripts     = Marlin/src/HAL/LPC1768/upload_extra_script.py
+extra_scripts     =
+  buildroot/share/PlatformIO/scripts/common-version.py
+  Marlin/src/HAL/LPC1768/upload_extra_script.py
 src_filter        = ${common.default_src_filter} +<src/HAL/LPC1768>
 lib_deps          = Servo
   LiquidCrystal
@@ -279,7 +281,9 @@ build_flags       = -DU8G_HAL_LINKS -IMarlin/src/HAL/LPC1768/include -IMarlin/sr
 #  -mpoke-function-name
 lib_ldf_mode      = off
 lib_compat_mode   = strict
-extra_scripts     = Marlin/src/HAL/LPC1768/upload_extra_script.py
+extra_scripts     =
+  buildroot/share/PlatformIO/scripts/common-version.py
+  Marlin/src/HAL/LPC1768/upload_extra_script.py
 src_filter        = ${common.default_src_filter} +<src/HAL/LPC1768>
 lib_deps          = Servo
   LiquidCrystal
@@ -761,12 +765,17 @@ board             = BigTree_SKR_Pro
 build_flags       = ${common.build_flags}
   -DUSBCON -DUSBD_USE_CDC -DUSBD_VID=0x0483 -DUSB_PRODUCT=\"STM32F407ZG\"
   -DTARGET_STM32F4 -DSTM32F407_5ZX -DVECT_TAB_OFFSET=0x8000
+  -DFLASH_PAGE_SIZE=0x8000
   -IMarlin/src/HAL/STM32
 build_unflags     = -std=gnu++11
-extra_scripts     = pre:buildroot/share/PlatformIO/scripts/generic_create_variant.py
+extra_scripts     =
+  pre:buildroot/share/PlatformIO/scripts/generic_create_variant.py
+  buildroot/share/PlatformIO/scripts/common-version.py
+  Marlin/src/HAL/LPC1768/upload_extra_script.py
+  buildroot/share/PlatformIO/scripts/common-upload-copy.py
 lib_ignore        = SoftwareSerial, SoftwareSerialM
 src_filter        = ${common.default_src_filter} +<src/HAL/STM32>
-#upload_protocol   = stlink
+upload_protocol   = custom
 #upload_command    = "$PROJECT_PACKAGES_DIR/tool-stm32duino/stlink/ST-LINK_CLI.exe" -c SWD -P "$BUILD_DIR/firmware.bin" 0x8008000 -Rst -Run
 debug_tool        = stlink
 debug_init_break  =
